some minor changes